# NuroSymbolicRegression

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  migration.md
legacy/: README.md  expressioncration.py  neuro_symbol_network.py  neuro_symbol_network3.py  untitled87.py
results/: benchmark_summary.md  mean_7_20260318_010106.json
src/nuro_symbolic_regression/: __init__.py
src/nuro_symbolic_regression.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nuro_symbolic_regression/application/: __init__.py  config.py  fitness.py  use_cases.py
src/nuro_symbolic_regression/domain/: __init__.py  benchmarks.py  expression.py  operators.py
src/nuro_symbolic_regression/infrastructure/export/: __init__.py  benchmark_report.py  history_plot.py  sympy_exporter.py
src/nuro_symbolic_regression/infrastructure/search/: __init__.py  genetic_programming.py
src/nuro_symbolic_regression/interfaces/: __init__.py  cli.py
tests/: test_cli_reporting.py  test_expression.py  test_gp.py
