[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuro-symbolic-regression"
version = "0.1.0"
description = "Portfolio-grade symbolic regression project with clean architecture"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NuroSymbolicRegression" }]
dependencies = [
  "numpy>=1.24",
  "sympy>=1.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]
plot = [
  "matplotlib>=3.8"
]

[project.scripts]
nsr = "nuro_symbolic_regression.interfaces.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

